Add WineClassification Controller
